Trim-Limit entkoppelt die 120-ms-Kappe vom Sicherheitsflag

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -931,10 +931,10 @@
                                     Randstille automatisch prüfen
                                     <small>Aktiv: Vor und nach dem Stretching werden stille Bereiche analysiert und nur dort gekürzt. Deaktiviert: Der Puffer wird lediglich entfernt, weitere Schnitte entfallen.</small>
                                 </label>
-                                <label class="checkbox-line" for="tempoSafetyTrimLimit" title="Begrenzt automatische Kürzungen auf nachweislich stille Passagen">
+                                <label class="checkbox-line" for="tempoSafetyTrimLimit" title="Begrenzt automatische Kürzungen auf nachweislich stille Passagen; deaktiviert lässt die Analyse ohne feste Obergrenze arbeiten">
                                     <input type="checkbox" id="tempoSafetyTrimLimit" checked>
-                                    Trim-Sicherheitslimit anwenden
-                                    <small>Aktiv: Zusätzliche Stille wird höchstens im sicheren Rahmen gekürzt. Deaktiviert: Die Randanalyse darf ihre volle Länge entfernen.</small>
+                                    Trim-Sicherheitslimit (120&nbsp;ms) anwenden
+                                    <small>Aktiv: Zusätzliche Stille wird höchstens im sicheren Rahmen gekürzt. Deaktiviert: Keine feste Obergrenze&nbsp;– erkannte Randstille darf vollständig entfernt werden.</small>
                                 </label>
                             </div>
                         </div>
