feat: erweitere EN-Review um Wiedergabe

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -1243,11 +1243,13 @@
                     </section>
                 </div>
             </div>
+            <div class="english-review-progress" id="englishReviewProgress" aria-live="polite">Fortschritt: 0 / 0 (0%)</div>
             <div class="dialog-buttons english-review-controls">
                 <button class="btn btn-secondary" id="englishReviewPrevBtn" type="button" onclick="englishReviewPrev()" title="Vorherige Datei" aria-label="Vorherige Datei">⏮</button>
                 <button class="btn btn-secondary" id="englishReviewPlayBtn" type="button" onclick="englishReviewPlay()" title="Wiedergabe starten" aria-label="Wiedergabe starten">▶</button>
                 <button class="btn btn-secondary" id="englishReviewPauseBtn" type="button" onclick="englishReviewPause()" title="Wiedergabe anhalten" aria-label="Wiedergabe anhalten">⏸</button>
                 <button class="btn btn-secondary" id="englishReviewNextBtn" type="button" onclick="englishReviewNext()" title="Nächste Datei" aria-label="Nächste Datei">⏭</button>
+                <button class="btn btn-secondary" id="englishReviewScrollBtn" type="button" onclick="englishReviewScrollToCurrent()" title="Aktuelle Zeile anzeigen" aria-label="Zur aktuellen Zeile scrollen">⬇ Zeile</button>
                 <button class="btn btn-secondary" id="englishReviewCloseBtn" type="button" onclick="closeEnglishReview()" title="Dialog schließen" aria-label="Dialog schließen">Schließen</button>
             </div>
         </div>
