Erweiterter Projektwechsel mit Schrittanzeige

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -26,6 +26,7 @@
         <div class="loading-box">
             <div class="progress-bar"><div class="progress-fill"></div></div>
             <span id="projectLoadingText">Projekt wird geladen...</span>
+            <ul id="projectLoadingSteps" class="loading-steps"></ul>
         </div>
     </div>
     <div id="errorBanner" class="error-banner hidden">
